--- a/usr/share/applications/arcolinux-betterlockscreen.desktop
+++ b/usr/share/applications/arcolinux-betterlockscreen.desktop
@@ -4,7 +4,7 @@ GenericName=Betterlockscreen
 X-GNOME-FullName=Betterlockscreen
 Comment=Change the image for the lockscreen
 Exec=/usr/local/bin/arcolinux-betterlockscreen
-Icon=Betterlockscreen
+Icon=betterlockscreen
 Terminal=false
 Type=Application
 Categories=GTK;GNOME;Utility;Settings;Security;X-GNOME-Settings-Panel;X-GNOME-SystemSettings;X-Unity-Settings-Panel;X-XFCE-SettingsDialog;X-XFCE-SystemSettings;
